@@ -1,3 +1,7 @@
+2013-07-08  Tassilo Horn  <tsdh@gnu.org>
+
+	* gnus-registry.el (gnus-registry-remove-extra-data): New function.
+
 2013-07-06  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-art.el (gnus-block-private-groups): Allow `global' methods to
